--- a/src/style.css
+++ b/src/style.css
@@ -54,9 +54,9 @@ li::first-letter {
   margin-bottom: 20px;
 }
 
-.weather-temperature img {
-  height: 64px;
-  width: 64px;
+.weather-image {
+  display: inline;
+  width: 200px;
 }
 
 .weather-temperature strong {
